--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
   <properties>
     <cdap.version>[6.7.0-SNAPSHOT,7.0.0)</cdap.version>
+    <slf4j.version>1.7.5</slf4j.version>
   </properties>
 
   <dependencies>
@@ -46,6 +47,13 @@
       <version>2.17</version>
       <type>maven-plugin</type>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
