--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.cdap.cdap</groupId>
-  <artifactId>cdap-event-writer-extensions</artifactId>
+  <artifactId>cdap-event-writer-spi</artifactId>
   <name>CDAP Event Writer Extensions</name>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>6.7.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
