--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
   <properties>
     <cdap.version>[6.7.0-SNAPSHOT,7.0.0)</cdap.version>
-    <slf4j.version>1.7.5</slf4j.version>
+    <slf4j.version>1.5.6</slf4j.version>
   </properties>
 
   <dependencies>
@@ -46,6 +46,16 @@
       <artifactId>maven-checkstyle-plugin</artifactId>
       <version>2.17</version>
       <type>maven-plugin</type>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
