--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <cdap.version>[6.7.0-SNAPSHOT,7.0.0)</cdap.version>
+    <cdap.version>6.7.0-SNAPSHOT</cdap.version>
     <slf4j.version>1.5.6</slf4j.version>
   </properties>
 
