--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <groupId>io.cdap.cdap</groupId>
   <artifactId>cdap-event-writer-extensions</artifactId>
   <name>CDAP Event Writer Extensions</name>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -30,7 +30,7 @@
   </modules>
 
   <properties>
-    <cdap.version>6.7.0-SNAPSHOT</cdap.version>
+    <cdap.version>6.7.0</cdap.version>
     <slf4j.version>1.5.6</slf4j.version>
   </properties>
 
