--- a/cdap-event-writer-ext-gcp-pubsub/pom.xml
+++ b/cdap-event-writer-ext-gcp-pubsub/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>io.cdap.cdap</groupId>
     <artifactId>cdap-event-writer-extensions</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>cdap-event-writer-ext-gcp-pubsub</artifactId>
