--- a/cdap-event-reader-ext-gcp-pubsub/pom.xml
+++ b/cdap-event-reader-ext-gcp-pubsub/pom.xml
@@ -22,23 +22,33 @@
 
   <parent>
     <groupId>io.cdap.cdap</groupId>
-    <artifactId>cdap-event-writer-extensions</artifactId>
+    <artifactId>cdap-event-reader-extensions</artifactId>
     <version>1.3.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>cdap-event-writer-ext-gcp-pubsub</artifactId>
-  <name>CDAP event writer extension for Gooogle Cloud Pub/Sub</name>
+  <artifactId>cdap-event-reader-ext-gcp-pubsub</artifactId>
+  <name>CDAP event reader extension for Gooogle Cloud Pub/Sub</name>
 
   <dependencies>
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pubsub</artifactId>
-      <version>1.108.1</version>
+      <version>1.123.6</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.7</version>
+      <version>2.10.1</version>
+    </dependency>
+      <dependency>
+          <groupId>io.cdap.cdap</groupId>
+          <artifactId>cdap-event-reader-spi</artifactId>
+        <version>6.10.0-SNAPSHOT</version>
+      </dependency>
+    <dependency>
+    <groupId>io.cdap.cdap</groupId>
+    <artifactId>cdap-event-common-spi</artifactId>
+    <version>6.10.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
