--- a/pom.xml
+++ b/pom.xml
@@ -20,24 +20,37 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.cdap.cdap</groupId>
-  <artifactId>cdap-event-writer-extensions</artifactId>
-  <name>CDAP Event Writer Extensions</name>
+  <artifactId>cdap-event-reader-extensions</artifactId>
+  <name>CDAP Event reader Extensions</name>
   <version>1.3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
-    <module>cdap-event-writer-ext-gcp-pubsub</module>
+    <module>cdap-event-reader-ext-gcp-pubsub</module>
   </modules>
 
   <properties>
-    <cdap.version>6.9.0-SNAPSHOT</cdap.version>
-    <slf4j.version>1.5.6</slf4j.version>
+    <mockito.version>3.12.2</mockito.version>
+    <cdap.version>6.10.0-SNAPSHOT</cdap.version>
+    <slf4j.version>2.0.5</slf4j.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-event-writer-spi</artifactId>
+      <artifactId>cdap-event-reader-spi</artifactId>
+      <version>${cdap.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.cdap.cdap</groupId>
+      <artifactId>cdap-event-common-spi</artifactId>
       <version>${cdap.version}</version>
       <scope>provided</scope>
       <exclusions>
@@ -50,7 +63,7 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-checkstyle-plugin</artifactId>
-      <version>2.17</version>
+      <version>3.1.2</version>
       <type>maven-plugin</type>
       <exclusions>
         <exclusion>
@@ -75,14 +88,20 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>3.12.2</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>2.2.0</version>
     </dependency>
   </dependencies>
 
