--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   </modules>
 
   <properties>
-    <cdap.version>6.9.1-SNAPSHOT</cdap.version>
+    <cdap.version>6.9.1</cdap.version>
     <slf4j.version>1.5.6</slf4j.version>
   </properties>
 
